# Archilog-project

./: README.md
archilog-0.2/: PKG-INFO  README.md  data.db  dev.env  pyproject.toml
archilog-0.2/src/archilog/: config.py  models.py  views.py
archilog-0.2/src/archilog/views/: __init__.py  cli.py  gui.py
archilog-0.2/src/archilog/views/static/: style.css
archilog-0.2/src/archilog/views/templates/: home.html
